--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-loader": "^9.0.0",
     "browserslist": "^4.21.4",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
+    "cssnano": "^5.1.14",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.18",
